--- a/client/src/components/styles/card.module.css
+++ b/client/src/components/styles/card.module.css
@@ -2,6 +2,7 @@
     border: solid 3px transparent;
     border-radius: 10px;
     width: 20vw;
+    height: fit-content;
     padding: 15px;
     display:flex;
     flex-wrap: wrap;
