--- a/client/src/components/styles/detail.module.css
+++ b/client/src/components/styles/detail.module.css
@@ -3,36 +3,54 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: #73a942;
+    height:100vh ;
+    background-color:  #bcdf7f ;
     background-image: url('../../images/background.jpg');
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-repeat: repeat;
+    
     }
 
 .info{
-    margin-top: 10px;
     border: solid 2px #2c4592;
     border-radius: 10px;
     background-color: transparent;
     box-shadow: 1px 2px 3px 4px rgba(20,20,20,0.4);
     width: 24vw;
     z-index: 1;
-    min-height: 100vh;
+    height: 100vh;
 }
-
+.pic{
+    z-index: 3;
+    position: absolute;
+    bottom: 50vh;
+    right: 41vw;
+}
+.subtitle{
+    margin-top: 30px;
+}
 .stats{
     position: absolute;
     z-index: 2;
     width: 24vw;
-    height: 50vh;
-    top: 53vh;
+    height: 54vh;
+    top: 46vh;
     border: solid 2px #2c4592;
     border-top: transparent;
-    border-radius: 25px;
+    border-radius: 15px;
     background-color: #e5e5e5;
     box-shadow: 0 2px 3px 4px rgba(20,20,20,0.4);
     opacity: 0.9;
+}
+.types{
+    margin-top: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:  #85b571;
+    width: fit-content;
+    padding: 0 10px 0 10px;
+    border-radius: 4px;
 }
 
 .button {
@@ -51,6 +69,7 @@
     font-family: "Kabel Bd", sans-serif;
     color: #e5e5e5;
     text-decoration: none;
+    box-shadow: 0 2px 3px 2px rgba(20, 20, 20, 0.4);
 
   }
   .button:hover {
