--- a/client/src/components/styles/home.module.css
+++ b/client/src/components/styles/home.module.css
@@ -1,5 +1,6 @@
 .main_container {
   background-image: url("../../images/blue.jpg");
+  background-color: #2c4592;
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
@@ -9,7 +10,7 @@
   min-width: 100%;
 }
 .pic {
-  margin: 0;
+  margin-bottom: 5vh ;
   justify-content: center;
   align-self: center;
   width: 380px;
@@ -28,6 +29,7 @@
   font-family: "Kabel Bd", sans-serif;
   color: #2c4592;
   text-decoration: none;
+  box-shadow: 0 2px 3px 2px rgba(20, 20, 20, 0.4);
 }
 .button:hover {
   background-color: #2c4592;
@@ -59,12 +61,12 @@
   border-style: groove;
   cursor: pointer;
   background-color: #2c4592;
-  color:#e5e5e5;
+  color: #e5e5e5;
   /* background-color: rgba(30, 52, 142, 0.5); */
 }
 .refresh_btn:hover {
   background-color: #eeb913;
-  color: black
+  color: black;
 }
 .select {
   margin-top: 2vh;
@@ -79,16 +81,32 @@
   width: 250px;
   margin-right: 10px;
 }
-.select:hover{
-    background-color: #2c4592;
-    color:#e5e5e5 ;
-    border: black;
+.select:hover {
+  background-color: #2c4592;
+  color: #e5e5e5;
+  border: black;
 }
-.cards{
+.select:focus{
+  background-color: #2c4592;
+  color: #e5e5e5;
+  border: black;
+}
+.cards {
   display: inline-block;
-  text-decoration: none;
 }
-.cards a{
+.cards a {
   text-decoration: none;
   color: #2c4592;
+}
+
+.error {
+  margin-top: 10vh;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fb0404;
+  width: fit-content;
+  padding: 5px 10px 5px 10px;
+  color: #e5e5e5;
+  border-radius: 4px;
+  border: solid 2px transparent
 }
