--- a/client/src/components/styles/paginado.module.css
+++ b/client/src/components/styles/paginado.module.css
@@ -1,20 +1,24 @@
-.pagination{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-.numbers{
-    font-family: "Kabel Bd", sans-serif;
-    font-size: 15px;
-    width: 3vw;
-    height: 6vh;
-    margin-right:12px ;
-    border-radius: 50%;
-    border: solid 3px #2c4592;
-    color: #2c4592;
-    background-color: #e5e5e5;
+.numbers {
+  font-family: "Kabel Bd", sans-serif;
+  font-size: 15px;
+  width: 3vw;
+  height: 6vh;
+  margin-right: 12px;
+  border-radius: 50%;
+  border: solid 3px #2c4592;
+  color: #2c4592;
+  background-color: #e5e5e5;
 }
-.numbers:hover{
+.numbers:hover {
+  background-color: #2c4592;
+  color: #e5e5e5;
+}
+.numbers:focus {
     background-color: #2c4592;
-    color: #e5e5e5 ;
+    color: #e5e5e5;
 }
