--- a/client/src/components/styles/landingpage.module.css
+++ b/client/src/components/styles/landingpage.module.css
@@ -1,42 +1,49 @@
-.background h1{
-    margin: 0;
-    color:  #0c0504;
-    text-shadow: 3px 3px #2c4592;
-    font-size: 50px;
-    position: absolute;
-    top: 35vh;
-    left: 6vw;
-}
 
 .background{
-    margin: 0;
-    background-image: url('../../images/bluepikachu.jpg');
-    background-color: #2c4592;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    background-image: url('../../images/pokeballbg.jpg');
+    background-color: #78d8ee ;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
     width: 100%;
 }
+.box{
+    position: relative;
+    margin-right: 3vw;
+    bottom: 15vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    height: 30vh;
+    justify-content: space-around;
+}
+.box h1{
+    margin: 0;
+    color:  #f0fafb ;
+    text-shadow: 3px 3px #040404;
+    font-size: 2.8rem;
+}
 
 .button{
-    position: absolute;
-    left: 30vw;
-    bottom: 38vh;
     width: 100px;
     height: fit-content;
     padding: 5px;
-    background-color: white;
+    background-color: #c32530 ;
     border-radius: 5px ;
-    border: solid 3px  #2f5487;
+    border: solid 3px transparent;
     cursor: pointer;
     font-size: 20px;
     font-family: 'Kabel Bd', sans-serif;
-    color: #2f5487;
+    color: #f0fafb ;
+    box-shadow: 0 2px 3px 2px rgba(20, 20, 20, 0.4);
 }
 .button:hover{
-    background-color: #2f5487;
-    color: white;
-    border: solid 3px #2f5487;
-    border-style: groove;
+    background-color: #053c5e  ;
+    color: #f0fafb;
+    border: solid 3px #f0fafb;
+    box-shadow: 0 2px 3px 2px rgba(20, 20, 20, 0.4);
 }
