changes landing page, adds sweets alerts, adds responsive desing and clear filters with refresh button

--- a/client/src/components/styles/card.module.css
+++ b/client/src/components/styles/card.module.css
@@ -19,3 +19,8 @@
     border: 2px solid transparent;
     border-style: groove;
 }
+@media only screen and (max-width: 1000px){
+    .card{
+        width:fit-content ;
+    }
+}
