--- a/client/src/components/styles/paginado.module.css
+++ b/client/src/components/styles/paginado.module.css
@@ -6,8 +6,8 @@
 .numbers {
   font-family: "Kabel Bd", sans-serif;
   font-size: 15px;
-  width: 3vw;
-  height: 6vh;
+  width: 45px;
+  height: 45px;
   margin-right: 12px;
   border-radius: 50%;
   border: solid 3px #2c4592;
