--- a/client/src/components/styles/pokemoncreator.module.css
+++ b/client/src/components/styles/pokemoncreator.module.css
@@ -142,4 +142,23 @@
       color: #f42007;
       font-size: 14px;
   }
-  
+  @media only screen and (max-width: 768px){
+    .form{
+        width: 50%;
+    }
+    .input{
+        width: 22vw;
+    }
+    .container{
+        background-position: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 768px){
+      .form{
+          width: 80%;
+      }
+      .input{
+          width: 40vw;
+      }
+  }
