--- a/client/src/components/styles/home.module.css
+++ b/client/src/components/styles/home.module.css
@@ -121,6 +121,12 @@
   border-radius: 4px;
   border: solid 2px transparent
 }
+.sadPikachu{
+  height: 150px;
+  width: auto;
+  margin-top: 15px;
+  margin-left: 10px;
+}
 
 @media only screen and (max-width: 768px){
   .button{
