--- a/client/src/components/styles/loader.module.css
+++ b/client/src/components/styles/loader.module.css
@@ -1,47 +1,24 @@
-.lds_ring {
-    display: inline-block;
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    top: 70%;
-    right: 47%;
-    
-  }
-  /* .loading{
-      position: absolute;
-      top: 80%;
-      right:46%;
-      font-size: 1rem;
-      color: #2c4592;
-      text-shadow: #2c4592;
-  } */
-  .lds_ring div {
-    box-sizing: border-box;
+   .loadingContainer {
+    position: fixed;
     display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    opacity: 0.9;
+    background-color: #fff;
+    z-index: 999;
+  }
+  
+  .loadingImage {
+    /* width: 600px;
+    height: auto; */
     position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid #fff;
-    border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #fff transparent transparent transparent;
-  }
-  .lds_ring div:nth-child(1) {
-    animation-delay: -0.45s;
-  }
-  .lds_ring div:nth-child(2) {
-    animation-delay: -0.3s;
-  }
-  .lds_ring div:nth-child(3) {
-    animation-delay: -0.15s;
-  }
-  @keyframes lds-ring {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
   }
   
