--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/kabel-bd');
+@import url('https://fonts.cdnfonts.com/css/kabel-bd');
 
 body {
   margin: 0;
